# posterm

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.docs/: architecture.md  design.md  implementation-plan.md  requirements.md
.forgejo/workflows/: build-and-package.yml  ci.yml
.github/workflows/: build-and-package.yml  ci.yml  release.yml
packaging/windows/: posterm.wxs
scripts/: install.ps1  install.sh
src/: action.rs  app.rs  event.rs  main.rs  state.rs  tui.rs  updater.rs
src/components/: help_modal.rs  layout_manager.rs  mod.rs  overlay_manager.rs  status_bar.rs
src/components/request_builder/: auth_panel.rs  body_editor.rs  headers_editor.rs  key_value_editor.rs  mod.rs  query_params.rs  url_bar.rs
src/components/response_viewer/: metadata_bar.rs  mod.rs  raw_view.rs  response_body.rs  response_headers.rs  search_bar.rs
src/components/sidebar/: collection_tree.rs  history_list.rs  mod.rs
src/highlight/: mod.rs  theme.rs
src/http/: client.rs  mod.rs  request_builder.rs  response_processor.rs
src/persistence/: atomic_write.rs  collections.rs  config.rs  history.rs  mod.rs
src/util/: mod.rs  streaming_buffer.rs  terminal_sanitize.rs  url_parser.rs
xtask/src/: main.rs
