[package]
name = "posterm"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "rustls-tls", "stream"] }
serde_json = "1.0"
syntect = "5.2"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "time"] }
