[package]
name = "posterm"
version = "0.1.0"
edition = "2024"
description = "A terminal application for Postman-style workflows"
authors = ["Posterm Contributors"]
license = "MIT"

[dependencies]
base64 = "0.22"
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5"
futures-util = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
syntect = "5.2"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
