[package]
name = "posterm"
version = "0.3.0"
edition = "2024"
description = "A terminal application for Postman-style workflows"
authors = ["Posterm Contributors"]
license = "MIT"

[dev-dependencies]
serial_test = "3"

[dependencies]
base64 = "0.22"
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
flate2 = "1.1"
futures-util = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "rustls-tls", "stream"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
syntect = "5.2"
tar = "0.4"
tempfile = "3"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
